# minilisp

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md
crates/data-structures/: Cargo.toml
crates/data-structures/src/: cell.rs  cons.rs  errors.rs  lib.rs  list.rs  macros.rs  refcounter.rs  symbol.rs  traits.rs  unique_pointer.rs  value.rs
crates/data-structures/src/value/: float.rs  macros.rs  mod.rs  unsigned_integer.rs
crates/data-structures/tests/: test_binary_tree.rs  test_binary_tree_refs.rs  test_cell_conversion.rs  test_cell_iter.rs  test_cell_methods.rs  test_cell_traits.rs  test_cons.rs  test_node.rs  test_refcounter.rs  test_sexprs.rs  test_sexprs_repr.rs  test_simple_binary_tree.rs  test_unique_ptr.rs  test_value.rs  test_value_conversion.rs  test_value_iter.rs  test_value_repr.rs
crates/decorators/: Cargo.toml
crates/decorators/src/: lib.rs
crates/decorators/tests/: debug.rs  test_error_type.rs  value.rs
crates/formatter/: Cargo.toml
crates/formatter/src/: errors.rs  main.rs  naive.rs
crates/formatter/tests/: test_format_data_structures.rs  test_format_token_stream.rs  test_format_token_tree.rs
crates/lang/: Cargo.toml
crates/lang/src/: cli.rs  errors.rs  lib.rs
crates/macros-core/: Cargo.toml
crates/macros-core/src/: errors.rs  ordered_string_set.rs  test.rs
crates/macros-core/src/builder/: enum_builder.rs
crates/macros-core/src/builder/enum_builder/: clone.rs  debug.rs  display.rs  ord.rs  partial_eq.rs  partial_ord.rs  variants.rs
crates/macros-core/tests/: test_enum_builder.rs
crates/parser/: Cargo.toml  cli.rs
crates/parser/src/: ast.rs  errors.rs  grammar.pest  lib.rs  macros.rs  test.rs
crates/parser/src/ast/: helpers.rs  item.rs  mod.rs  node.rs  nodes.rs  source.rs  value.rs
crates/parser/src/ast/source/: info.rs  node.rs  position.rs
crates/parser/src/source/: span.rs
crates/parser/tests/: test_parse.rs  test_sexprs.rs
crates/repl/: Cargo.toml
crates/repl/src/: errors.rs  lib.rs  main.rs
crates/util/: Cargo.toml
crates/util/src/: color.rs  lib.rs  macros.rs
crates/vm/: Cargo.toml
crates/vm/src/: context.rs  errors.rs  function.rs  helpers.rs  lib.rs  macros.rs  sym.rs  symbol_table.rs  table.rs  test.rs  virtual_machine.rs
crates/vm/src/builtin/: identity.rs  list.rs  mod.rs  state.rs  string.rs
crates/vm/src/builtin/math/: arithmetic.rs
crates/vm/tests/: test_defun.rs  test_list.rs  test_math.rs  test_sexprs.rs  test_string.rs
