[package]
name = "minilisp-repl"
authors.workspace = true
categories.workspace = true
description.workspace = true
documentation.workspace = true
edition.workspace = true
homepage.workspace = true
keywords.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true

autoexamples = false
autobenches = false
autotests = false

[package.metadata]
cargo-args = ["-Zmtime-on-use", "-Zavoid-dev-deps", "-Zcustom_mir"]

[dependencies]
minilisp-util = {workspace = true}
minilisp-vm = {workspace = true}
minilisp-parser = {workspace = true}
rustyline = {workspace = true, features = ["with-file-history", "with-sqlite-history", "rustyline-derive"]}


[[bin]]
name = "minilisp"
path = "src/main.rs"